--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   position: absolute;
-  top: 110px;
+  top: 140px;
   z-index: -1;
 }
 
@@ -40,10 +40,25 @@ body {
 }
 
 button {
-  background: #31363f;
+  background: #d4129a;
+  color: white;
+  width: 80px;
+  height: 2.5em;
+  border: none;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  vertical-align: middle;
 }
 
 input[type=text] {
   background-color: #31363f;
   color: white;
+  height: 1em;
+  width: 15em;
+  border: none;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  vertical-align: middle;
 }
