--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+:root {
+  --main-theme-color: #d4129a;
+}
+
 * {
   font-family: Trebuchet MS;
   color: #d6d8da;
@@ -47,13 +51,14 @@ body {
 
 .form-inline button {
   padding: 5px 20px;
-  background-color: #d4129a;
+  background-color: var(--main-theme-color);
   border: none;
   border-radius: 5px;
 }
 
 .form-inline button:hover {
   background-color: #d15dae;
+  transition: 0.3s all;
 }
 
 @media (max-width: 800px) {
@@ -87,4 +92,11 @@ body {
   flex-direction: column;
   align-items: center;
   background: #31363f;
+}
+
+span, span::before {
+  content: "⚠ ";
+  color: var(--main-theme-color);
+  font-size: 14px;
+  margin-top: 5px;
 }
